# bfc-ros2

./: LICENSE  README.md
src/bfc_msgs/msg/: Coordination.msg
src/coordination/: CMakeLists.txt  package.xml
src/coordination/src/: coordination.cpp
src/darknet_ros_fp16/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
src/game_controller/src/: game_controller.cpp
src/main/: CMakeLists.txt  package.xml
src/main/config/: barelang.yaml
src/main/launch/: barelang_robot.launch.py
src/main/src/: main.cpp
src/motion_bridge/src/: motion_bridge.cpp
src/vision/: README.md
src/vision/yolov8_bytetrack/TensorRT-YOLOv8/: CMakeLists.txt  README.md  main.cpp  package.xml
src/vision/yolov8_bytetrack/TensorRT-YOLOv8/detect/include/: config.h
src/vision/yolov8_bytetrack/od_msgs/: CMakeLists.txt  package.xml
src/vision/yolov8_bytetrack/od_msgs/msg/: BallDetectionArray.msg  BallInfo.msg
src/vision/yolov8_bytrseg/TensorRT-YOLOv8/: .goutputstream-7MMFN3  CMakeLists.txt  README.md  main.cpp  package.xml
src/vision/yolov8_bytrseg/TensorRT-YOLOv8/detect/: Makefile  cmake_install.cmake  main
src/vision/yolov8_bytrseg/TensorRT-YOLOv8/detect/calibration/: calibration.npz
src/vision/yolov8_bytrseg/TensorRT-YOLOv8/detect/include/: cnpy.h  config.h  field_segmentation.h
src/vision/yolov8_bytrseg/TensorRT-YOLOv8/detect/src/: cnpy.cpp  field_segmentation.cpp
src/vision/yolov8_bytrseg/detect_msgs/: CMakeLists.txt  package.xml
src/vision/yolov8_bytrseg/detect_msgs/msg/: BallDetectionArray.msg  BallInfo.msg  MidpointArray.msg  MidpointInfo.msg
src/vision/yolov8_segment/segment/: CMakeLists.txt  README.md  main.cpp  package.xml
src/vision/yolov8_segment/segment/include/: config.h  draw.h  infer.h  utils.h
src/vision/yolov8_segment/segment/src/: draw.cu  infer.cpp
src/vision/yolov8_segment/yolo_msgs/: CMakeLists.txt  package.xml
src/vision/yolov8_segment/yolo_msgs/msg/: Midpoint.msg  Midpoints.msg
