<?xml version="1.0"?>
<package format="2">
  <name>yolov8_segment</name>
  <version>0.1.0</version>
  <description>ROS 2 package for YOLO instance segmentation with ROS integration.</description>
  <maintainer email="zakyaskarsonia@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>vision_opencv</depend>
  <depend>yolo_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

